hw-detect (1.31) UNRELEASED; urgency=low

  * If d-i is using pcmciautils-udeb instead of pcmcia-cs-udeb (needed on
    2.6.13 kernels), then install pcmciautils as well as pcmcia-cs.
  * The new update-dev that handles udev has been around for a while, so
    drop old calls to udevstart/udevsynthesize.

 -- Colin Watson <cjwatson@debian.org>  Sat, 24 Dec 2005 16:20:46 +0000

hw-detect (1.30) unstable; urgency=low

  * udebs are not allowed to have ORed deps (and it was adding cruft to the
    build) so remove the discover/udev deps entirely. It would be better to
    use a depends on something provided by both packages, but these deps are
    not really needed since both hw-detect and one or the other is part of the
    d-i base system.

 -- Joey Hess <joeyh@debian.org>  Sat,  3 Dec 2005 12:55:10 -0500

hw-detect (1.29) unstable; urgency=low

  * Add udev-udeb as alternate dependency for discover.

  [ Updated translations ]
  * Latvian (lv.po) by Aigars Mahinovs

 -- Colin Watson <cjwatson@debian.org>  Fri,  2 Dec 2005 10:38:29 +0000

hw-detect (1.28) unstable; urgency=low

  [ Frans Pop ]
  * Drop dependency on hotplug-udeb for hw-detect as there's no such thing.
  * ethdetect.sh: avoid grep error if /etc/network/devnames doesn't exist.

  [ Colin Watson ]
  * Rename /etc/network/devnames.gz to /etc/network/devnames-static.gz to
    avoid confusion with /etc/network/devnames (closes: #340919).
  * Consider HOTPLUG_TYPE as udev if the hotplug handler is empty (i.e.
    udevd is listening for events on a netlink socket).

  [ Updated translations ]
  * Malagasy (mg.po) by Jaonary Rabarisoa
  * Russian (ru.po) by Yuri Kozlov

 -- Colin Watson <cjwatson@debian.org>  Thu,  1 Dec 2005 13:04:27 +0000

hw-detect (1.27) unstable; urgency=low

  * If we're running with udev, apt-install udev rather than hotplug.

  [ Updated translations ]
  * French (fr.po) by Christian Perrier
  * Japanese (ja.po) by Kenshi Muto
  * Romanian (ro.po) by Eddy Petrişor
