@@ -4,6 +4,8 @@ hw-detect (1.31) UNRELEASED; urgency=low
     2.6.13 kernels), then install pcmciautils as well as pcmcia-cs.
   * The new update-dev that handles udev has been around for a while, so
     drop old calls to udevstart/udevsynthesize.
+  * Install discover1 in /target even if d-i is using udev, since X's
+    maintainer scripts need discover.
 
  -- Colin Watson <cjwatson@debian.org>  Sat, 24 Dec 2005 16:20:46 +0000
 
